<?xml version="1.0"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Shared custom message interfaces for the R2 master containers</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- 必须用 ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 生成 msg 必须依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 告诉 ROS2 这是接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
